cmake_minimum_required(VERSION 3.22)
project(308Project)
set(CMAKE_CXX_STANDARD 11)
include_directories(.)
add_executable(308Project main.c glad.c)
find_package(glfw3 3.3.6 REQUIRED)
find_package(OpenGL REQUIRED)
target_link_libraries(308Project OpenGL::GL glfw)
target_link_libraries(308Project glut GLU GL)
target_link_libraries(308Project m)